edited RunLocalTest